--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #Update all the sections by editing the data.yml file inside _data folder.
 
 # Site Settings
-title:  Myronis CV
+title:Ioannis Myronis CV
 url: 'https://p18myro.github.io'
 baseurl: '/cv' #change it according to your repository name
 description: 
