--- a/_data/data.yml
+++ b/_data/data.yml
@@ -15,6 +15,7 @@ sidebar:
     email: p18myro@ionio.gr
     phone: 210 45 50618      
     github: p18myro
+    pdf: pdf/cv.pdf
        
 
     languages:
